--- a/fibonacci_tutrial.ipynb
+++ b/fibonacci_tutrial.ipynb
@@ -23,18 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'a_10' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-20977aecf986>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# ここにa_10までを計算するように書く\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'a_10' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
      ]
     }
    ],
@@ -42,10 +38,15 @@
     "a_0 = 0\n",
     "a_1 = 1\n",
     "a_2 = a_1 + a_0\n",
-    "a_3 = a_2 + a_2\n",
-    "\n",
+    "a_3 = a_2 + a_1\n",
     "# ここにa_10までを計算するように書く\n",
-    "\n",
+    "a_4 = a_3 + a_2\n",
+    "a_5 = a_4 + a_3\n",
+    "a_6 = a_5 + a_4\n",
+    "a_7 = a_6 + a_5\n",
+    "a_8 = a_7 + a_6\n",
+    "a_9 = a_8 + a_7\n",
+    "a_10 = a_9 + a_8\n",
     "print(a_10)"
    ]
   },
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,15 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-6-4ac2623fba61>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-4ac2623fba61>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    このforループの中を編集してやってみましょう。\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 2)\n",
+      "(4, 3)\n",
+      "(5, 5)\n",
+      "(6, 8)\n",
+      "(7, 13)\n",
+      "(8, 21)\n",
+      "(9, 34)\n",
+      "(10, 55)\n"
      ]
     }
    ],
@@ -94,13 +101,24 @@
     "a_0 = 0\n",
     "a_1 = 1\n",
     "\n",
-    "このforループの中を編集してやってみましょう。\n",
-    "for i in range(2, 11):\n",
-    "    a_i = \n",
-    "    print(a_i)\n",
+    "x = a_0\n",
+    "y = a_1\n",
+    "z = y+x\n",
     "\n",
-    "a_10 = a_i\n",
-    "print(a_10)"
+    "\n",
+    "for i in range(3,11):\n",
+    "    x = y\n",
+    "    y = z\n",
+    "    z = y + x\n",
+    "    print(i,z)\n",
+    "\n",
+    "\n",
+    "#このforループの中を編集してやってみましょう。\n",
+    "\n",
+    "\n",
+    "\n",
+    "#a_10 = a_i\n",
+    "#print(a_10)"
    ]
   },
   {
@@ -112,11 +130,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('f(', 3, ')=', 2)\n",
+      "('f(', 4, ')=', 3)\n",
+      "('f(', 5, ')=', 5)\n",
+      "('f(', 6, ')=', 8)\n",
+      "('f(', 7, ')=', 13)\n",
+      "('f(', 8, ')=', 21)\n",
+      "('f(', 9, ')=', 34)\n",
+      "('f(', 10, ')=', 55)\n"
+     ]
+    }
+   ],
    "source": [
-    "#ここにプログラムを書く"
+    "#ここにプログラムを書く\n",
+    "\n",
+    "n=10\n",
+    "\n",
+    "a_0 = 0\n",
+    "a_1 = 1\n",
+    "\n",
+    "x = a_0\n",
+    "y = a_1\n",
+    "z = y+x\n",
+    "\n",
+    "\n",
+    "for i in range(3,n+1):\n",
+    "    x = y\n",
+    "    y = z\n",
+    "    z = y + x\n",
+    "    print(\"f(\",i,\")=\",z)"
    ]
   },
   {
@@ -128,25 +177,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-caced4a3774c>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-10-caced4a3774c>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    a_n =\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('f(', 3, ')=', 2)\n",
+      "('f(', 4, ')=', 3)\n",
+      "('f(', 5, ')=', 5)\n",
+      "('f(', 6, ')=', 8)\n",
+      "('f(', 7, ')=', 13)\n",
+      "('f(', 8, ')=', 21)\n",
+      "('f(', 9, ')=', 34)\n",
+      "('f(', 10, ')=', 55)\n",
+      "('fib(', 10, ')=', 55)\n"
      ]
     }
    ],
    "source": [
     "def fib(n):\n",
     "    #ここにプログラムを書く\n",
-    "    a_n = \n",
+    "    a_0 = 0\n",
+    "    a_1 = 1\n",
+    "\n",
+    "    x = a_0\n",
+    "    y = a_1\n",
+    "    z = y+x\n",
+    "\n",
+    "\n",
+    "    for i in range(3,n+1):\n",
+    "        x = y\n",
+    "        y = z\n",
+    "        z = y + x\n",
+    "        print(\"f(\",i,\")=\",z)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    a_n =z \n",
     "    return a_n\n",
     "\n",
-    "fib(10)"
+    "n=10\n",
+    "print(\"fib(\",n,\")=\",fib(n))"
    ]
   },
   {
@@ -158,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1]\n"
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n"
      ]
     }
    ],
@@ -173,6 +246,13 @@
     "def fib_list(n):\n",
     "    result = [0, 1]\n",
     "    #ここにプログラムを書く\n",
+    "    for i in range(2,n+1):\n",
+    "        x = result[-2]\n",
+    "        y = result[-1]\n",
+    "        z = y + x\n",
+    "    \n",
+    "    \n",
+    "        result.append(z)\n",
     "    return result\n",
     "\n",
     "print(fib_list(10))"
@@ -195,17 +275,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(4, 2)\n",
+      "(5, 3)\n",
+      "(6, 5)\n",
+      "(7, 8)\n",
+      "(8, 13)\n",
+      "(9, 21)\n",
+      "(10, 34)\n",
+      "(11, 55)\n",
+      "(12, 89)\n"
+     ]
+    }
+   ],
    "source": [
     "m = 100\n",
-    "i = 0\n",
-    "a_i = 0\n",
+    "i = 2\n",
+    "a_i = 1+0\n",
     "while a_i<=m:\n",
     "    #ここにプログラムを書く\n",
-    "    a_i = 101\n",
-    "    i = i + 1"
+    "    result=fib_list(i)\n",
+    "    print(i,a_i)\n",
+    "    i = i + 1\n",
+    "    a_i = result[-1]\n",
+    "    "
    ]
   },
   {
@@ -218,21 +319,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
